<?xml version="1.0"?>
<package format="3">
  <name>cartesian_control_msgs</name>
  <version>0.1.0</version>
  <description>Cartesian trajectory execution interface.</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>


   <url type="website">http://wiki.ros.org/cartesian_control_msgs</url>

  <author email="exner@fzi.de">Felix Exner</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
